[package]
name = "near-cached"
version = "0.8.0"
authors = ["James Kominick <james@kominick.com>"]
description = "Near fork of https://github.com/jaemk/cached"
repository = "https://github.com/nearprotocol/cached"
readme = "README.md"
categories = ["caching"]
keywords = ["caching", "cache", "memoize", "lru"]
license = "MIT"

[dependencies]
once_cell = "0.1.6"
